--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             iframe.src=links[page];
         })
 
+        function getUserRole(){
+            let token = localStorage.getItem('token');
+            if(!token) return null;
+            let payload = JSON.parse(atob(token.split('.')[1]));
+            return payload;
+        }
+
         $("#sign-in-button").click(()=>{
             $("#sign-in-modal").fadeIn();
         })
