--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             return payload;
         }
 
+        getUserRole();
+
         $("#sign-in-button").click(()=>{
             $("#sign-in-modal").fadeIn();
         })
