--- a/index.html
+++ b/index.html
@@ -61,20 +61,13 @@
         function getUserRole(){
             let token = localStorage.getItem('token');
             if(!token) return null;
-            let base64Url = token.split('.')[1];
-            var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
-            var jsonPayload = decodeURIComponent(window.atob(base64).split('').map(function(c) {
-                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-            }).join(''));
-            getUser(JSON.parse(jsonPayload).sub);
-        }
-
-        function getUser(username){
+            let payload = JSON.parse(atob(token.split('.')[1]));
+            let username = payload.sub;
             $.getJSON(`http://localhost:8080/users/${username}`, (user)=>{
-                console.log(me)
+                console.log(user);
             })
         }
-        getUser();
+
         getUserRole();
 
         $("#sign-in-button").click(()=>{
