--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="user-info">
                 <button class="sign-in" id="sign-in-button">Увійти</button>
                 <span id="username" style="display: none;"></span>
+                <button class="sign-in" id="sign-out" style="display: none;">Вийти</button>
             </div>
         </header>
         
@@ -57,24 +58,34 @@
     $(document).ready(()=>{
         iframe = $("#iframe-content")[0]
         getUserRole().then(role=>{
-            $.getJSON("https://yehormovchan.github.io/assets/permits.json", (data)=>{
-                let permits = data[role];
-                let aList = $("a").toArray();
-                aList.forEach(element => {
-                    if(permits.includes(element.id)){
-                        $(element).show();
-                    }
-                    else{
-                        $(element).hide();
-                    }
-                });
-            })
+            if(!role){
+                $("a").hide()
+            }
+            else{
+                $.getJSON("https://yehormovchan.github.io/assets/permits.json", (data)=>{
+                    let permits = data[role];
+                    let aList = $("a").toArray();
+                    aList.forEach(element => {
+                        if(permits.includes(element.id)){
+                            $(element).show();
+                        }
+                        else{
+                            $(element).hide();
+                        }
+                    });
+                })
+            }
         })
         
         getUser().then(user=>{
-            $("#sign-in-button").hide();
-            $("#username").show();
-            $("#username").text(user.username);
+            if(!user){
+                $("#sign-in-button").show();
+            }
+            else{
+                $("#username").show();
+                $("#username").text(user.username);
+                $("#sign-out").show();
+            }
         })
 
         $.getJSON("https://yehormovchan.github.io/assets/links.json", (data)=>{
@@ -105,6 +116,10 @@
                 $("#login-error").show();
             }
         });
+        })
+        $("#sign-out").click(()=>{
+            localStorage.removeItem('token');
+            location.reload();
         })
     })
     function changePage(el){
