--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 $("#sign-in-button").show();
             }
             else{
+                $("sign-in-button").hide();
                 $("#username").show();
                 $("#username").text(user.username);
                 $("#sign-out").show();
