--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         })
         $("#sign-out").click(()=>{
             localStorage.removeItem('token');
-            location.reload();
+            location.href("yehormovchan.github.io/index.html");
         })
     })
     function changePage(el){
