--- a/iframe-content/staff/staff-attendance.html
+++ b/iframe-content/staff/staff-attendance.html
@@ -120,7 +120,7 @@
                 }
             });
         
-            $("create-attendance-button").click(()=>{
+            $("#create-attendance-button").click(()=>{
                 let staff = staffId;
                 let date = $("#attendance-date").val();
                 let start = $("#attendance-start").val();
