--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         })
         $("#sign-out").click(()=>{
             localStorage.removeItem('token');
-            location.href("https://yehormovchan.github.io/index.html");
+            iframe.src("");
         })
     })
     function changePage(el){
