--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -40,6 +40,18 @@
         $(document).ready(function() {
             let urlParams = new URLSearchParams(window.location.search);
             let teacherId = urlParams.get("id");
+            if (!teacherId) {
+                getUser().then((user) => {
+                    if (!user) {
+                        window.location.href = "https://yehormovchan.github.io/";
+                        return;
+                    }
+                    teacherId = user.staff;
+                }, (error) => {
+                    console.error("Error fetching user data:", error);
+                });
+                return;
+            }
             let lessonData;
             $.getJSON(`http://localhost:8080/view/schedule/teacher=${teacherId}`, function(data) {
 
