--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -6,7 +6,7 @@
     <title>Розклад вчителя</title>
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/style.css">
     <link rel="stylesheet" href="https://yehormovchan.github.io/static/iframe-styles.css">
-    <link rel="stylesheet" href="https://yehormovchan.github.io/static/script.js">
+    <script src="https://yehormovchan.github.io/static/script.js">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
