--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -54,6 +54,9 @@
                 });
                 return;
             }
+            else{
+                fillInfo(teacherId);
+            }
             let lessonData;
 
             function fillInfo(teacherId){
