--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -108,7 +108,7 @@
                             }
 
                         }
-                        $("#schedule-body").appendChild(tr);
+                        $("#schedule-body").append(tr);
                     }
 
                 });
