fix: wrap attendance iframe in an accordion block for better structure and add close button to attendance modal

--- a/iframe-content/personal-account/index.html
+++ b/iframe-content/personal-account/index.html
@@ -40,7 +40,10 @@
         </div>
     </div>
         
-    <iframe id="attendance" src="" frameborder="0" class="addition-block"></iframe>
+    <div class="accordion-block">
+        <div class="accordion-header">Години роботи</div>
+        <iframe id="attendance" src="" frameborder="0" class="addition-block"></iframe>
+    </div>
 
     
     <script>
