fix: change lessonData declaration to use existing variable for consistency in lesson info display

--- a/iframe-content/staff/staff-schedule.html
+++ b/iframe-content/staff/staff-schedule.html
@@ -90,7 +90,7 @@
                                 td.innerText=  `${schedule[j][i].subjectName} (${schedule[j][i].classField})`;
                                 td.style.cursor = "pointer";
                                 td.onclick = ()=>{
-                                    let lessonData = schedule[j][i];
+                                    lessonData = schedule[j][i];
                                     if (!lessonData) return;
                                     
                                     $("#lesson-info").html(`${lessonData.subjectName}  (${lessonData.classField})`);
